# Lumina

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  compile_shaders.py  sc.bat  spirv_generate_interface.bat  spirv_generate_interface.py
cmake/: AstrumConfig.cmake.in  CompilerOptions.cmake  Dependencies.cmake
docs/: material_system_design.md
lumina/: CMakeLists.txt
lumina/data/runtime/shaders/: shader.frag.spv  shader.vert.spv
lumina/data/shaders/interfaces/: interface.global.glsl  simple_input_basic_mat.frag.glsl  simple_model_input.vert.glsl  standard_lit.frag.glsl  standard_lit.vert.glsl
lumina/data/shaders/interfaces/headers/: interface.global.hpp  simple_input_basic_mat.frag.hpp  simple_model_input.vert.hpp  standard_lit.frag.hpp  standard_lit.vert.hpp
lumina/data/shaders/spv/: shader.frag.spv  shader.vert.spv
lumina/data/shaders/src/: shader.frag  shader.vert
lumina/data/static/shaders/interfaces/: color_output.frag.glsl  interface.global.glsl  position_only.vert.glsl
lumina/data/static/shaders/interfaces/headers/: color_output.frag.hpp  interface.global.hpp  position_only.vert.hpp
lumina/data/static/shaders/src/: debug_wireframe.frag  debug_wireframe.vert  shader.frag  shader.vert
lumina/src/: CMakeLists.txt
lumina/src/common/: CMakeLists.txt  debug_print.hpp  fast_random.hpp  lumina_assert.hpp  lumina_terminate.cpp  lumina_terminate.hpp  lumina_types.hpp  lumina_util.hpp  path_registry.cpp  path_registry.hpp  path_resolver.hpp  scope_guard.hpp  timer.hpp
lumina/src/common/data_structures/: data_buffer.hpp  lock_free_concurrent_queue.hpp  lock_free_object_pool.hpp  work_stealing_deque.hpp
lumina/src/common/logger/: console_target.cpp  console_target.hpp  file_target.cpp  file_target.hpp  log_levels.hpp  log_target.hpp  logger.cpp  logger.hpp
lumina/src/core/: CMakeLists.txt  basic_geometry.hpp  bounding_box.cpp  bounding_box.hpp  camera.cpp  camera.hpp  camera_movement_controller.cpp  camera_movement_controller.hpp  debug_overlay_controller.cpp  debug_overlay_controller.hpp  engine_coordinates.hpp  entity.hpp  entity_manager.cpp  entity_manager.hpp  lumina_engine.cpp  lumina_engine.hpp  mesh_cache.cpp  mesh_cache.hpp  resource_manager.hpp  resource_manager_handle.hpp  static_mesh.cpp  static_mesh.hpp  vertex_attribute.cpp  vertex_attribute.hpp  window_dimensions.hpp  world.cpp  world.hpp
lumina/src/core/components/: camera.hpp  component_storage.hpp  light_component.hpp  static_mesh_component.hpp  transform.hpp
lumina/src/core/input/: input_action.cpp  input_action.hpp  input_dispatcher.cpp  input_dispatcher.hpp  input_state.cpp  input_state.hpp
lumina/src/core/job_system/: CMakeLists.txt  job_manager.cpp  job_manager.hpp
lumina/src/core/uniform_interface/: uniform_interface.cpp  uniform_interface.hpp
lumina/src/data_parsers/: CMakeLists.txt  obj_parser.cpp  obj_parser.hpp
lumina/src/math/: basic.hpp  linear_algebra.hpp  matrix.hpp  quaternion.hpp  trigonometry.hpp  vector.hpp
lumina/src/platform/: CMakeLists.txt
lumina/src/platform/common/: CMakeLists.txt  platform_services.cpp  platform_services.hpp  runtime_root.hpp
lumina/src/platform/common/vulkan/: CMakeLists.txt  vulkan_debug_callback.hpp  vulkan_init_result.hpp
lumina/src/platform/linux/: CMakeLists.txt  linux_input_map.hpp  linux_main.cpp  linux_platform_services.cpp  linux_platform_services.hpp  linux_runtime_root.cpp  linux_window.cpp  linux_window.hpp
lumina/src/platform/linux/vulkan/: CMakeLists.txt  linux_vulkan.cpp  linux_vulkan.hpp  linux_vulkan_surface.cpp  linux_vulkan_surface.hpp
lumina/src/platform/platform_common/: CMakeLists.txt  file_handle.hpp  platform_services.hpp  window_base.hpp
lumina/src/platform/platform_common/vulkan/: CMakeLists.txt  vulkan_debug_callback.cpp  vulkan_instance.cpp  vulkan_instance.hpp
lumina/src/platform/windows/: CMakeLists.txt  win_input_map.hpp  win_main.cpp  win_platform_services.cpp  win_platform_services.hpp  win_runtime_root.cpp  win_window.cpp  win_window.hpp
lumina/src/platform/windows/vulkan/: CMakeLists.txt  win_vulkan.cpp  win_vulkan.hpp  win_vulkan_instance.cpp  win_vulkan_instance.hpp  win_vulkan_surface.cpp  win_vulkan_surface.hpp
lumina/src/renderer/: CMakeLists.txt  command_context.cpp  command_context.hpp  frame_context.cpp  frame_context.hpp  graphics_pipeline.hpp  graphics_pipeline_handle.hpp  material_instance.cpp  material_instance.hpp  material_instance_handle.hpp  material_template.cpp  material_template.hpp  material_template_handle.hpp  primitive_topology.hpp  render_mesh.hpp  renderer.cpp  renderer.hpp  vertex_layout.cpp  vertex_layout.hpp  vertex_serializer.cpp  vertex_serializer.hpp  vulkan_context.cpp  vulkan_context.hpp
lumina/src/renderer/shaders/: shader_interface.cpp  shader_interface.hpp  shader_layout.hpp  shader_module_cache.cpp  shader_module_cache.hpp  shader_vk_helpers.hpp
lumina/src/renderer/shaders/shader_gen/: static_shader_api.cpp  static_shader_api.hpp
tools/: CMakeLists.txt
tools/spriv_reflect_tool/: CMakeLists.txt
tools/spriv_reflect_tool/src/: main.cpp
